# qgpt

./: .gitignore  README.md  RoadMap.md  pyproject.toml  requirements.txt
docs/frames/: riley.md
docs/openai/: models.md  techniques.md
docs/openai/api/: chat-completions.md  chat.md  completions.md  getting-started.md
model/: setting.json
qgpt/: __main__.py
qgpt/assistant/: __init__.py  memory.py  queue.py
qgpt/assistant/setting/: __init__.py  json.py  path.py
qgpt/gui/: __init__.py  chat.py  editor.py  mainwindow.py  menu_bar.py  menubar.py  thread.py
qgpt/openai/: __init__.py  api.py  completion.py  messenger.py  model.py
qtgpt_toolkit/: __main__.py
