[tool.poetry]
name               = "qtgpt-toolkit"
version            = "0.0.1"
description        = "A toolkit that treats GPT models as first class citizens."
authors            = ["Austin Berrio <77757836+teleprint-me@users.noreply.github.com>"]
license            = "LGPLv3"

[tool.poetry.dependencies]
python             = "^3.10"
python-dateutil    = "^2.8.2"
python-dotenv      = "^0.21.1"
pytz               = "^2022.1"
iso8601            = "^1.1.0"
requests           = "^2.28.2"
openai             = "^0.27.0"
tiktoken           = "^0.3.2"
pyside6            = { version = "^6.4.2", python = ">=3.10,<3.12" }

[tool.poetry.dev-dependencies]
bpython            = "^0.24"
black              = "^23.1.0"
flake8             = "^6.0.0"
flake8-black       = "^0.3.6"
pdoc               = "^12.3.1"
pytest             = "^7.2.1"
requests-mock      = "^1.10.0"
isort              = "^5.12.0"

[tool.black]
line-length = 79

[build-system]
requires           = ["poetry-core>=1.0.0"]
build-backend      = "poetry.core.masonry.api"
